# debian-qpid-proton

./: qpid-proton_0.12.0.orig.tar.gz.delta  qpid-proton_0.12.0.orig.tar.gz.id  qpid-proton_0.13.1.orig.tar.gz.delta  qpid-proton_0.13.1.orig.tar.gz.id  qpid-proton_0.20.0.orig.tar.gz.delta  qpid-proton_0.20.0.orig.tar.gz.id  qpid-proton_0.21.0.orig.tar.gz.delta  qpid-proton_0.21.0.orig.tar.gz.id  qpid-proton_0.24.0.orig.tar.gz.delta  qpid-proton_0.24.0.orig.tar.gz.id  qpid-proton_0.28.0.orig.tar.gz.delta  qpid-proton_0.28.0.orig.tar.gz.id  qpid-proton_0.31.0.orig.tar.gz.delta  qpid-proton_0.31.0.orig.tar.gz.id  qpid-proton_0.32.0.orig.tar.gz.delta  qpid-proton_0.32.0.orig.tar.gz.id  qpid-proton_0.33.0.orig.tar.gz.delta  qpid-proton_0.33.0.orig.tar.gz.id  qpid-proton_0.34.0.orig.tar.gz.delta  qpid-proton_0.34.0.orig.tar.gz.id
.pc/: applied-patches
c/examples/: CMakeLists.txt
debian/: changelog  control  libqpid-proton-core10-dev.install  libqpid-proton-core10.install  libqpid-proton-cpp11-dev-doc.lintian-overrides  libqpid-proton-cpp11.install  libqpid-proton-cpp12-dev-doc.install  libqpid-proton-cpp12-dev-doc.lintian-overrides  libqpid-proton-cpp12-dev-examples.install  libqpid-proton-cpp12-dev.install  libqpid-proton-cpp12.install  libqpid-proton-proactor1-dev.install  libqpid-proton-proactor1.install  libqpid-proton10-dev-doc.lintian-overrides  libqpid-proton10-dev-examples.lintian-overrides  libqpid-proton10.install  libqpid-proton11-dev-doc.lintian-overrides  libqpid-proton11-dev-examples.install  libqpid-proton11-dev.install  libqpid-proton11.install  rules  (+9 more)
(+35 files in other folders)
